使用 Colaboratory 建立

--- a/0306.ipynb
+++ b/0306.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9hTVXvpfAzXElwZcJaVU5",
+      "authorship_tag": "ABX9TyOK2pxeMVGq8WAQWumMp7Ir",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,243 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a=0"
+      ],
       "metadata": {
         "id": "4FhZO9sQ4zg2"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a\n",
+        "0"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JX8ERjiq81Fu",
+        "outputId": "fca5b51f-6fd8-4731-9047-2dc75eaefb83"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b=1"
+      ],
+      "metadata": {
+        "id": "IDgA83aO9Was"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b\n",
+        "1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "blXLkbrf9aV4",
+        "outputId": "33fc8dd0-1213-4f6d-ecea-e24afe41e8eb"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c=2"
+      ],
+      "metadata": {
+        "id": "_hgapok-9fcV"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c\n",
+        "2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ff7juRNp9jKv",
+        "outputId": "f5b98bc5-09a7-4469-c397-ea6f00548b92"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a,b,c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9yAApYLW9m33",
+        "outputId": "b48ce739-0f5a-401f-a916-8fc5e494042a"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0, 1, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a+b+c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WBfQfWyx9vO3",
+        "outputId": "def8ba7a-2739-499c-9a34-8e589bc38121"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d=e=f=4"
+      ],
+      "metadata": {
+        "id": "j1sU1lEu9zRb"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a+b+c+d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KU_qY83x-VdF",
+        "outputId": "45147e53-8a91-46a9-d8b4-58cc6d8bd78d"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A=1"
+      ],
+      "metadata": {
+        "id": "-87tRgoh-n9g"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a,A"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k-zofQca-tml",
+        "outputId": "d1872ee0-6fd6-494f-9ed6-fa85c6d7b194"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0, 1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "markdown",
